# wcf

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  buildVariablesMap.cpp  buildVariablesMap.hpp  tools.cpp  tools.hpp
test/: CMakeLists.txt  main.cpp  test.cpp
